Updated Day 09 - BigDataTechnologies md